# slint_phone

./: .gitignore  Cargo.toml  Manifest.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: build.yml
docs/architecture/: 01-stt-perception.md
pkg/: package.json  slint_phone.d.ts  slint_phone.js  slint_phone_bg.wasm.d.ts
src/: controller.rs  lib.rs  logic.rs  main.rs  platform.rs
ui/: app-window.slint
