[package]
name = "slint_phone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slint = { version = "1.14.1", features = ["backend-android-activity-06"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.android]
apk_label = "SlintPhone"
icon = "ui/logo.png"
compile_sdk_version = 34
target_sdk_version = 34
min_sdk_version = 24
build_targets = ["aarch64-linux-android"]
