[package]
name = "slint_phone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpal = "0.17.3"
sherpa-onnx = "1.12.39"
slint = { version = "1.14.1", features = ["backend-android-activity-06"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.android]
apk_label = "SlintPhone"
icon = "@mipmap/ic_launcher"
compile_sdk_version = 34
target_sdk_version = 34
min_sdk_version = 24
build_targets = ["aarch64-linux-android"]
resources = "res"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "SlintPhone"
